# ComfyUI-AllergicPack

./: .gitignore  CLAUDE.md  DEV.md  README.md  __init__.py  allergic_utils.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml
AudioAnalyzer/: audio_analyzer.py
FileCounter_Folder/: filecounter_folder.py  usrname0 - LICENSE.txt
FolderFileCounter/: folder_file_counter.py
IncrementorPlus/: incrementor_plus.py
MasterBatcher/: master_batcher.py
RememberMe/: remember_me.py
VaceContextManager/: vace_context_manager.py
js/: AudioAnalyzer.js  FolderFileCounter.js  IncrementorPlus.js  MasterBatcher.js  RememberMe.js  allergic_utils.js  fileCounterFolder.js
