[project]
name = "AllergicPack"
description = "A package of utility nodes.  Folder File Counter, Incrementor Plus, Remember Me (Environment Info), Audio Analyzer (BPM & Key Detection)"
version = "1.3.0"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "librosa",
]

[tool.setuptools]
packages = []

[project.urls]
Repository = "https://github.com/usrname0/ComfyUI-AllergicPack"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "usrname0"
DisplayName = "Allergic Pack"
Icon = ""
