[project]
name = "AllergicPack"
description = "A package of utility nodes.  Audio Analyzer, Master Batcher, Folder File Counter, Incrementor Plus, and Remember Me (Environment Info)"
version = "2.0.0"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "librosa",
]

[tool.setuptools]
packages = []

[project.urls]
Repository = "https://github.com/usrname0/ComfyUI-AllergicPack"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "usrname0"
DisplayName = "Allergic Pack"
Icon = ""
