[project]
name = "AllergicPack"
description = "A package of utility nodes.  Master Batcher, Folder File Counter, Incrementor Plus, and Remember Me (Environment Info)"
version = "3.0.0"
license = "MIT"
license-files = ["LICENSE"]
dependencies = []

[tool.setuptools]
packages = []

[project.urls]
Repository = "https://github.com/usrname0/ComfyUI-AllergicPack"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "usrname0"
DisplayName = "Allergic Pack"
Icon = ""
